test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-oknil-unmanaged.chpl
//  lhs: owned?  rhs: unmanaged?  error: mm

class MyClass {  var x: int;  }

var rhs: unmanaged MyClass?;

record MyRecord {
  var lhs: owned MyClass? = rhs;
}

var myr = new MyRecord();

compilerError("done");
