test/classes/errors/nilability-init-field-dflt/init-field-dflt-oknil-owned-from-oknil-unmanaged.good
init-field-dflt-oknil-owned-from-oknil-unmanaged.chpl:8: error: Cannot initialize 'lhs' of type owned MyClass? from a 'unmanaged MyClass?'
